--- a/travel-agency.html
+++ b/travel-agency.html
@@ -10,7 +10,7 @@
   <h2 class="popular">
     MAASAI MARA
   </h2>
-    <p>Be in the wild with the Big Five and so much more in the wild Kenyan Savannah</p>
+    <p class="bold">Be in the wild with the Big Five and so much more in the wild Kenyan Savannah</p>
     <img src="images/masai-mara.jpeg" alt="A picture of lions in the Mara">
     <img src="images/masai-mara1.jpg" alt="Migration of wilderbeasts at the Mara River">
     <img src="images/mara1.jpeg" alt="Views of the Mara">
@@ -18,24 +18,24 @@
   <h3 class="tropical">
     NAIROBI
   </h3>
-    <p> The only city in the world that has a National Park.</p>
+    <p class="bold"> The only city in the world that has a National Park.</p>
     <img src="images/nairobi2.jpeg" alt="Town from Nairobi National Park">
     <img src="images/nairobi.jpeg" alt="Nairobi city">
   <h4 class="tropical">
     KISUMU
   </h4>
-    <p> Welcome to the city by the lake. </p>
+    <p class="bold"> Welcome to the city by the lake. </p>
     <img src="images/kisumu.jpeg" alt="Lake Victoria">
     <img src="images/kisumu-sanctuary.jpeg" alt="The big rock">
   <h5 class="tropical">
     MOMBASA </h5>
-    <p>Best place to be under the sun.</p>
+    <p class="bold">Best place to be under the sun.</p>
     <img src="images/coast.jpeg" alt="The Beach">
     <img src="images/beach.jpeg" alt="Hotel by the beach">
   <h6 class="tropical">
     MALINDI
   </h6>
-   <p> Relax by the beach with sand on your feet and feel the great breeze from the Indian Ocean.</p>
+   <p class="bold"> Relax by the beach with sand on your feet and feel the great breeze from the Indian Ocean.</p>
    <img src="images/malindi.jpeg" alt="the beach">
    <img src="images/malindi1.jpeg" alt="Malindi in Coast">
 
